# database

./: Cargo.toml  README.md  api_links  diesel.toml  link  main.db  tutorial_links
migrations/2025-02-03-163204_create_tables/: up.sql  up.sql~
src/: .da  api.rs  main.rs  models.rs  models.rs~
src/database/: mod.rs  models.rs  schema.rs
