[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
miette = "7.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
threadpool = "1.8.1"